# ComfyUI_AniCrafter

./: AniCrafter_node.py  README.md  __init__.py  node_utils.py  pyproject.toml  requirements.txt
AniCrafter/: README.md  lhm_runner.py  parse_video.py  run_pipeline.py  run_pipeline_with_preprocess.py
AniCrafter/LHM/: launch.py
AniCrafter/LHM/models/: ESRGANer_utils.py  arcface_utils.py  modeling_human_lrm.py  transformer.py
AniCrafter/LHM/runners/: __init__.py
AniCrafter/LHM/utils/: download_utils.py  face_detector.py  ffmpeg_utils.py  gpu_utils.py  model_card.py  model_download_utils.py  video_utils.py
AniCrafter/ProPainter/: inference_propainter.py  requirements.txt  train.py
AniCrafter/ProPainter/core/: dataset.py  metrics.py
AniCrafter/ProPainter/scripts/: compute_flow.py  evaluate_flow_completion.py  evaluate_propainter.py
AniCrafter/ProPainter/utils/: download_util.py
AniCrafter/configs/convert/: 1B-hf.yaml  1B-step4.yaml  500M-hf.yaml  500M-step4.yaml  500M-step5-aug.yaml  500M-step5.yaml
AniCrafter/configs/inference/: human-lrm-1B.yaml
AniCrafter/demo/character_images/: 000000_gaussian.pth
AniCrafter/diffsynth/models/: model_manager.py  wan_video_dit.py
AniCrafter/diffsynth/pipelines/: __init__.py  cog_video.py  flux_image.py  hunyuan_image.py  hunyuan_video.py  omnigen_image.py  sd3_image.py  sd_image.py  sd_video.py  sdxl_image.py  (+7 more)
configs/Wan2.1-I2V-14B-720P/: diffusion_pytorch_model.safetensors.index.json
example_workflows/: AniCrafter_20250715_084336_gaussian.pth  workflows.json  workflows0721.json  workflows_ani.json
(+212 files in other folders)
